2011-08-27  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.0

2011-08-14  Jeffrey Stedfast  <fejj@gnome.org>

	* mono/*.custom: Simplified the GetEnumerator() implementations.

	* mono/HeaderEnumerator.cs: New IEnumerator class returned by
	HeaderList.GetEnumerator(). Wraps HeaderIter, providing a more
	C#-like experience.

2011-08-14  Jeffrey Stedfast  <fejj@gnome.org>

	* mono/GMime.metadata: Rename AppendHeader() to Append(),
	PrependHeader() to Prepend(), RemoveHeader() to Remove(), etc.

	* mono/HeaderList.custom: Instead of having
	GetHeader()/SetHeader(), manually bind this as an indexer.

	* gmime/gmime-header.c (g_mime_header_list_clear): New function
	to clear all headers.
	(g_mime_header_list_contains): New function added mostly for
	completeness in the C# binding.

2011-08-14  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.10

2011-08-14  Jeffrey Stedfast  <fejj@gnome.org>

	* mono/GMime.metadata (PartBase): Rename to Entity to be more
	consistent with MIME terminology and removed more convenience
	methods that really only make sense in the C API.
	(g_mime_object_new_type): Removed, there's no easy way to map this
	to managed.
	(g_mime_object_new): Removed, there's no easy way to map this
	to managed.

2011-08-14  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part-iter.c: Updated to be more consistent with IMAP
	part specifiers.

2011-08-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part-iter.c: New class for iterating over a tree of
	GMimeObjects. Fixes bug #652012.

2011-08-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-multipart.c (g_mime_multipart_replace): New
	convenience function to replace a mime part at a specified
	position.

2011-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.9

2011-07-17  Jeffrey Stedfast  <fejj@gnome.org>
